classDiagram
class DataCommon{
    read_data()
    write_data()
    -Lock lock
    -Queue queue
}

class DataInterface{
    -DataFrame stocklist
    -DataFrame working_stocklist
    -int num_stocks_to_update
    -Event event

    update_stockslist(initialize: bool)
    get_stocklist() DataFrame
    get_working_stocklist() DataFrame
    set_working_stocklist(num_stocks: str)
    sort_working_stocklist(sort_variable: str, sort_direction: bool)
}

class DataGatherer{
    -list~str~ data_columns
    -DataFrame stocks_to_update

    +gather_new_data()
    +check_message_queue()
    -get_most_active_with_positive_change() list
    -get_monthly_sentiment_data_from_sentdex() DataFrame
    -parse_twitter_data(page: str) Tuple
    -get_bull_data_from_twitter() DataFrame
    -get_twitter_momentum_score() DataFrame
    -get_one_and_seven_day_momentum_from_twitter(symbol: str, name: str) dict
    -get_stock_name(symbol: str) str
    -get_stocklist(stocklist: stocklist_enum)
}

class stocklist_enum{
    <<enumeration>>
    Movers
    CompanyInfo
    TwitterBullBear
    TwitterMomentum
}

DataCommon --|> DataInterface : Inheritance
DataCommon --|> DataGatherer : Inheritance
